--- a/Questionário_Projeto_de_Disciplina_de_Text_Mining.ipynb
+++ b/Questionário_Projeto_de_Disciplina_de_Text_Mining.ipynb
@@ -16,348 +16,6 @@
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
-        "c43928733e384a2fa8d7eebbe3f0954d": {
-          "model_module": "@jupyter-widgets/controls",
-          "model_name": "HBoxModel",
-          "model_module_version": "1.5.0",
-          "state": {
-            "_dom_classes": [],
-            "_model_module": "@jupyter-widgets/controls",
-            "_model_module_version": "1.5.0",
-            "_model_name": "HBoxModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/controls",
-            "_view_module_version": "1.5.0",
-            "_view_name": "HBoxView",
-            "box_style": "",
-            "children": [
-              "IPY_MODEL_ca3ba686bde04b56af9a0a6d95eb9808",
-              "IPY_MODEL_3392e359ab3d4e79bbe0dac3e47355de",
-              "IPY_MODEL_70f4f01086ce462fb2ef9455f150984b"
-            ],
-            "layout": "IPY_MODEL_ad4ed64bc8704c0e8053b411608c2f6a"
-          }
-        },
-        "ca3ba686bde04b56af9a0a6d95eb9808": {
-          "model_module": "@jupyter-widgets/controls",
-          "model_name": "HTMLModel",
-          "model_module_version": "1.5.0",
-          "state": {
-            "_dom_classes": [],
-            "_model_module": "@jupyter-widgets/controls",
-            "_model_module_version": "1.5.0",
-            "_model_name": "HTMLModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/controls",
-            "_view_module_version": "1.5.0",
-            "_view_name": "HTMLView",
-            "description": "",
-            "description_tooltip": null,
-            "layout": "IPY_MODEL_9d9d0207f6a24d139a5081bafd2843b2",
-            "placeholder": "​",
-            "style": "IPY_MODEL_fe7539f2022b4a9590399fcd37f65d41",
-            "value": "100%"
-          }
-        },
-        "3392e359ab3d4e79bbe0dac3e47355de": {
-          "model_module": "@jupyter-widgets/controls",
-          "model_name": "FloatProgressModel",
-          "model_module_version": "1.5.0",
-          "state": {
-            "_dom_classes": [],
-            "_model_module": "@jupyter-widgets/controls",
-            "_model_module_version": "1.5.0",
-            "_model_name": "FloatProgressModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/controls",
-            "_view_module_version": "1.5.0",
-            "_view_name": "ProgressView",
-            "bar_style": "success",
-            "description": "",
-            "description_tooltip": null,
-            "layout": "IPY_MODEL_69a9ada0b086456fa89e651db6063c5b",
-            "max": 7943,
-            "min": 0,
-            "orientation": "horizontal",
-            "style": "IPY_MODEL_f2f8ec1b239a43108634465610a7d82d",
-            "value": 7943
-          }
-        },
-        "70f4f01086ce462fb2ef9455f150984b": {
-          "model_module": "@jupyter-widgets/controls",
-          "model_name": "HTMLModel",
-          "model_module_version": "1.5.0",
-          "state": {
-            "_dom_classes": [],
-            "_model_module": "@jupyter-widgets/controls",
-            "_model_module_version": "1.5.0",
-            "_model_name": "HTMLModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/controls",
-            "_view_module_version": "1.5.0",
-            "_view_name": "HTMLView",
-            "description": "",
-            "description_tooltip": null,
-            "layout": "IPY_MODEL_d817a877593f4a6a8106d84aa4430748",
-            "placeholder": "​",
-            "style": "IPY_MODEL_2f79dae8aeaa440d944628b5b05216a2",
-            "value": " 7943/7943 [01:26&lt;00:00, 126.91it/s]"
-          }
-        },
-        "ad4ed64bc8704c0e8053b411608c2f6a": {
-          "model_module": "@jupyter-widgets/base",
-          "model_name": "LayoutModel",
-          "model_module_version": "1.2.0",
-          "state": {
-            "_model_module": "@jupyter-widgets/base",
-            "_model_module_version": "1.2.0",
-            "_model_name": "LayoutModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/base",
-            "_view_module_version": "1.2.0",
-            "_view_name": "LayoutView",
-            "align_content": null,
-            "align_items": null,
-            "align_self": null,
-            "border": null,
-            "bottom": null,
-            "display": null,
-            "flex": null,
-            "flex_flow": null,
-            "grid_area": null,
-            "grid_auto_columns": null,
-            "grid_auto_flow": null,
-            "grid_auto_rows": null,
-            "grid_column": null,
-            "grid_gap": null,
-            "grid_row": null,
-            "grid_template_areas": null,
-            "grid_template_columns": null,
-            "grid_template_rows": null,
-            "height": null,
-            "justify_content": null,
-            "justify_items": null,
-            "left": null,
-            "margin": null,
-            "max_height": null,
-            "max_width": null,
-            "min_height": null,
-            "min_width": null,
-            "object_fit": null,
-            "object_position": null,
-            "order": null,
-            "overflow": null,
-            "overflow_x": null,
-            "overflow_y": null,
-            "padding": null,
-            "right": null,
-            "top": null,
-            "visibility": null,
-            "width": null
-          }
-        },
-        "9d9d0207f6a24d139a5081bafd2843b2": {
-          "model_module": "@jupyter-widgets/base",
-          "model_name": "LayoutModel",
-          "model_module_version": "1.2.0",
-          "state": {
-            "_model_module": "@jupyter-widgets/base",
-            "_model_module_version": "1.2.0",
-            "_model_name": "LayoutModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/base",
-            "_view_module_version": "1.2.0",
-            "_view_name": "LayoutView",
-            "align_content": null,
-            "align_items": null,
-            "align_self": null,
-            "border": null,
-            "bottom": null,
-            "display": null,
-            "flex": null,
-            "flex_flow": null,
-            "grid_area": null,
-            "grid_auto_columns": null,
-            "grid_auto_flow": null,
-            "grid_auto_rows": null,
-            "grid_column": null,
-            "grid_gap": null,
-            "grid_row": null,
-            "grid_template_areas": null,
-            "grid_template_columns": null,
-            "grid_template_rows": null,
-            "height": null,
-            "justify_content": null,
-            "justify_items": null,
-            "left": null,
-            "margin": null,
-            "max_height": null,
-            "max_width": null,
-            "min_height": null,
-            "min_width": null,
-            "object_fit": null,
-            "object_position": null,
-            "order": null,
-            "overflow": null,
-            "overflow_x": null,
-            "overflow_y": null,
-            "padding": null,
-            "right": null,
-            "top": null,
-            "visibility": null,
-            "width": null
-          }
-        },
-        "fe7539f2022b4a9590399fcd37f65d41": {
-          "model_module": "@jupyter-widgets/controls",
-          "model_name": "DescriptionStyleModel",
-          "model_module_version": "1.5.0",
-          "state": {
-            "_model_module": "@jupyter-widgets/controls",
-            "_model_module_version": "1.5.0",
-            "_model_name": "DescriptionStyleModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/base",
-            "_view_module_version": "1.2.0",
-            "_view_name": "StyleView",
-            "description_width": ""
-          }
-        },
-        "69a9ada0b086456fa89e651db6063c5b": {
-          "model_module": "@jupyter-widgets/base",
-          "model_name": "LayoutModel",
-          "model_module_version": "1.2.0",
-          "state": {
-            "_model_module": "@jupyter-widgets/base",
-            "_model_module_version": "1.2.0",
-            "_model_name": "LayoutModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/base",
-            "_view_module_version": "1.2.0",
-            "_view_name": "LayoutView",
-            "align_content": null,
-            "align_items": null,
-            "align_self": null,
-            "border": null,
-            "bottom": null,
-            "display": null,
-            "flex": null,
-            "flex_flow": null,
-            "grid_area": null,
-            "grid_auto_columns": null,
-            "grid_auto_flow": null,
-            "grid_auto_rows": null,
-            "grid_column": null,
-            "grid_gap": null,
-            "grid_row": null,
-            "grid_template_areas": null,
-            "grid_template_columns": null,
-            "grid_template_rows": null,
-            "height": null,
-            "justify_content": null,
-            "justify_items": null,
-            "left": null,
-            "margin": null,
-            "max_height": null,
-            "max_width": null,
-            "min_height": null,
-            "min_width": null,
-            "object_fit": null,
-            "object_position": null,
-            "order": null,
-            "overflow": null,
-            "overflow_x": null,
-            "overflow_y": null,
-            "padding": null,
-            "right": null,
-            "top": null,
-            "visibility": null,
-            "width": null
-          }
-        },
-        "f2f8ec1b239a43108634465610a7d82d": {
-          "model_module": "@jupyter-widgets/controls",
-          "model_name": "ProgressStyleModel",
-          "model_module_version": "1.5.0",
-          "state": {
-            "_model_module": "@jupyter-widgets/controls",
-            "_model_module_version": "1.5.0",
-            "_model_name": "ProgressStyleModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/base",
-            "_view_module_version": "1.2.0",
-            "_view_name": "StyleView",
-            "bar_color": null,
-            "description_width": ""
-          }
-        },
-        "d817a877593f4a6a8106d84aa4430748": {
-          "model_module": "@jupyter-widgets/base",
-          "model_name": "LayoutModel",
-          "model_module_version": "1.2.0",
-          "state": {
-            "_model_module": "@jupyter-widgets/base",
-            "_model_module_version": "1.2.0",
-            "_model_name": "LayoutModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/base",
-            "_view_module_version": "1.2.0",
-            "_view_name": "LayoutView",
-            "align_content": null,
-            "align_items": null,
-            "align_self": null,
-            "border": null,
-            "bottom": null,
-            "display": null,
-            "flex": null,
-            "flex_flow": null,
-            "grid_area": null,
-            "grid_auto_columns": null,
-            "grid_auto_flow": null,
-            "grid_auto_rows": null,
-            "grid_column": null,
-            "grid_gap": null,
-            "grid_row": null,
-            "grid_template_areas": null,
-            "grid_template_columns": null,
-            "grid_template_rows": null,
-            "height": null,
-            "justify_content": null,
-            "justify_items": null,
-            "left": null,
-            "margin": null,
-            "max_height": null,
-            "max_width": null,
-            "min_height": null,
-            "min_width": null,
-            "object_fit": null,
-            "object_position": null,
-            "order": null,
-            "overflow": null,
-            "overflow_x": null,
-            "overflow_y": null,
-            "padding": null,
-            "right": null,
-            "top": null,
-            "visibility": null,
-            "width": null
-          }
-        },
-        "2f79dae8aeaa440d944628b5b05216a2": {
-          "model_module": "@jupyter-widgets/controls",
-          "model_name": "DescriptionStyleModel",
-          "model_module_version": "1.5.0",
-          "state": {
-            "_model_module": "@jupyter-widgets/controls",
-            "_model_module_version": "1.5.0",
-            "_model_name": "DescriptionStyleModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/base",
-            "_view_module_version": "1.2.0",
-            "_view_name": "StyleView",
-            "description_width": ""
-          }
-        },
         "2bddd203823d4bd08b390cdcd4b61054": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HBoxModel",
@@ -2587,22 +2245,22 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "20993b01-b7a1-494b-b334-709b0f1f6125"
+        "outputId": "bec5b33a-fd81-411a-d73f-3afa2e08f890"
       },
-      "execution_count": 45,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
             "[nltk_data] Downloading package stopwords to /root/nltk_data...\n",
-            "[nltk_data]   Package stopwords is already up-to-date!\n",
+            "[nltk_data]   Unzipping corpora/stopwords.zip.\n",
             "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
-            "[nltk_data]   Package punkt is already up-to-date!\n",
+            "[nltk_data]   Unzipping tokenizers/punkt.zip.\n",
             "[nltk_data] Downloading package rslp to /root/nltk_data...\n",
-            "[nltk_data]   Package rslp is already up-to-date!\n",
+            "[nltk_data]   Unzipping stemmers/rslp.zip.\n",
             "[nltk_data] Downloading package punkt_tab to /root/nltk_data...\n",
-            "[nltk_data]   Package punkt_tab is already up-to-date!\n"
+            "[nltk_data]   Unzipping tokenizers/punkt_tab.zip.\n"
           ]
         },
         {
@@ -2613,7 +2271,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 45
+          "execution_count": 4
         }
       ]
     },
@@ -2679,7 +2337,7 @@
         "id": "bce0QMD9Cd2N",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 224
+          "height": 310
         },
         "outputId": "e05741de-3df3-4371-99ef-b24b2aeb2356"
       },
@@ -3065,9 +2723,11 @@
         "from tqdm.auto import tqdm\n",
         "from nltk.tokenize import word_tokenize\n",
         "from nltk.corpus import stopwords\n",
-        "from nltk.stem import SnowballStemmer\n",
+        "from nltk.stem import RSLPStemmer\n",
+        "from typing import List\n",
         "\n",
-        "stemmer = SnowballStemmer(\"portuguese\")\n",
+        "stemmer = RSLPStemmer()\n",
+        "\n",
         "\n",
         "def tokenize(text: str) -> List:\n",
         "  \"\"\"\n",
@@ -3094,38 +2754,22 @@
         "id": "e0kNSRccMBy5",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 49,
-          "referenced_widgets": [
-            "c43928733e384a2fa8d7eebbe3f0954d",
-            "ca3ba686bde04b56af9a0a6d95eb9808",
-            "3392e359ab3d4e79bbe0dac3e47355de",
-            "70f4f01086ce462fb2ef9455f150984b",
-            "ad4ed64bc8704c0e8053b411608c2f6a",
-            "9d9d0207f6a24d139a5081bafd2843b2",
-            "fe7539f2022b4a9590399fcd37f65d41",
-            "69a9ada0b086456fa89e651db6063c5b",
-            "f2f8ec1b239a43108634465610a7d82d",
-            "d817a877593f4a6a8106d84aa4430748",
-            "2f79dae8aeaa440d944628b5b05216a2"
-          ]
+          "height": 176
         },
-        "outputId": "b9e5233e-2c64-4547-95d3-b6a5095e439a"
+        "outputId": "33ca7fad-98a4-44c8-fde6-3f154d12503d"
       },
-      "execution_count": 48,
+      "execution_count": 6,
       "outputs": [
         {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "  0%|          | 0/7943 [00:00<?, ?it/s]"
-            ],
-            "application/vnd.jupyter.widget-view+json": {
-              "version_major": 2,
-              "version_minor": 0,
-              "model_id": "c43928733e384a2fa8d7eebbe3f0954d"
-            }
-          },
-          "metadata": {}
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'news_2016' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-6-1768e1dd3492>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     58\u001b[0m   \u001b[0;32mreturn\u001b[0m \u001b[0;34m' '\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcleaned_tokens\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     59\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 60\u001b[0;31m \u001b[0mnews_2016\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'nltk_tokens'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnews_2016\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mprogress_map\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtokenize\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'news_2016' is not defined"
+          ]
         }
       ]
     },
@@ -4072,7 +3716,7 @@
         "id": "tLVrwjNr6r1c",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 823
         },
         "outputId": "f7ba612d-68f9-4d0b-8198-0d23e9422358"
       },
@@ -4129,7 +3773,7 @@
         "id": "IbaUfOtkCIaj",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 823
         },
         "outputId": "7312a76e-3285-4713-afa2-22d1e9733e3f"
       },
